# forge

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  Cargo.toml  ForgeConfig.hpp.in  Makefile  README.md  TODO  bootstrap.bash  codegen_context_basic_object_file  codegen_context_basic_object_file_main.c  conanfile.txt  external_llvm_obj_return_0  external_llvm_obj_return_0_main.c  extra.css  index.html  justfile  sitemap.xml
.github/workflows/: book.yml
cmake/: cpp.cmake  dependencies.cmake  llvm.cmake  options.cmake
crates/forge-core/: Cargo.toml
crates/forge-core/src/: ast.rs  interpreter.rs  lexer.rs  lib.rs  message.rs  parser.rs  sourcing.rs  syntax_tree.rs  token.rs
crates/forgec/: Cargo.toml
crates/forgec/src/: interpreter.rs  lexer.rs  lib.rs  sourcing.rs  syntax_tree.rs  token.rs
demo/: DemoSyntaxTreeDebugFormatter.cpp
demos/: DemoSyntaxTreeDebugFormatter.cpp  demo_abort.cpp  demo_assert.cpp  demo_command_line.cpp  demo_reporting.cpp  demo_syntax_tree_debug_formatter.cpp
docs/: Doxyfile  doxygen-awesome-sidebar-only.css  mkdocs.yml
docs/book/for-developers/: architecture.md  getting-started.md
docs/book/reference/: message-codes.md
docs/docs/: custom.css  index.md  intro.md  naming-convention.md
docs/docs/language/: planning.md
docs/docs/tutorial/: debug-formatting.md  defining-a-syntax-tree.md  well-formed-validation.md
for-developers/architecture/: index.html
for-developers/concepts/abstract-syntax-tree/: index.html
for-developers/concepts/lexing/: index.html
for-developers/concepts/messaging/: index.html
for-developers/concepts/sourcing/: index.html
for-developers/getting-started/: index.html
forge/codegen/: codegen_context.cpp  codegen_context.hpp  codegen_context.test.cpp  function_codegen_context.hpp  jit_context.cpp  jit_context.hpp  jit_context.tpp
forge/core/: Tracing.cpp  Tracing.hpp  Tracing.tpp  assert.hpp  execute_binary.cpp  execute_binary.hpp  execute_binary.test.cpp  init.cpp  init.hpp  init.test.cpp  math_utilities.hpp  math_utilities.test.cpp  math_utilities.tpp  null_streambuf.cpp  null_streambuf.hpp  null_streambuf.test.cpp  string_utilities.cpp  string_utilities.hpp  string_utilities.test.cpp  unicode.cpp  unicode.hpp
forge/language/: forge_codegen.cpp  forge_codegen.hpp  forge_formatters.cpp  forge_formatters.hpp  forge_message_emitters.cpp  forge_message_emitters.hpp  forge_message_emitters.tpp
forge/language/handlers/: iforge_handler.cpp  iforge_handler.hpp  iforge_handler.tpp
forge/language/parsing/: forge_lexer.cpp  forge_lexer.hpp  forge_lexer.test.cpp  forge_parsers.cpp  forge_parsers.hpp  forge_parsers.test.cpp  forge_token_kind.hpp
forge/language/syntax_tree/: base_forge_node.cpp  base_forge_node.hpp  forge_node_kind.hpp  translation_unit.cpp  translation_unit.hpp  translation_unit.test.cpp
forge/language/type_logic/: get_arithmetic_containing_type.cpp  get_arithmetic_containing_type.hpp  get_casting_mode.cpp  get_casting_mode.hpp  type_predicates.cpp  type_predicates.hpp  type_predicates.test.cpp
forge/messaging/: Message.cpp  Message.hpp  Message.test.cpp  MessageContext.cpp  MessageContext.hpp  MessageContext.test.cpp  MessageContext.tpp  Severity.cpp  Severity.hpp  Severity.test.cpp  message_context.cpp  message_context.hpp  message_context.test.cpp  message_context.tpp
forge/parsing/domain/: source.cpp  source.hpp  source_location.cpp  source_location.hpp  source_location.test.cpp  source_range.cpp  source_range.hpp  source_range.test.cpp  token.cpp  token.hpp  token_kind.cpp  token_kind.hpp
forge/parsing/lexing/: base_lexer.cpp  base_lexer.hpp  lexer.cpp  lexer.hpp  lexer_context.cpp  lexer_context.hpp  lexer_context.test.cpp
forge/parsing/reading/: grapheme_cluster_reader.cpp  grapheme_cluster_reader.hpp  grapheme_cluster_reader.test.cpp  line_indexed_unicode_string.cpp  line_indexed_unicode_string.hpp  line_indexed_unicode_string.test.cpp
forge/parsing/sourcing/: Domain.cpp  Domain.hpp  LineIndexedString.cpp  LineIndexedString.test.cpp  line_indexed_string.cpp  line_indexed_string.hpp  line_indexed_string.test.cpp
forge/parsing/syntax_parsing/: parser_fragments.cpp  parser_fragments.hpp  parser_fragments.tpp  parsing_context.cpp  parsing_context.hpp  parsing_context.test.cpp  syntax_parsing_context.cpp  syntax_parsing_context.hpp
forge/reporting/: get_sample_lines.cpp  get_sample_lines.hpp  get_sample_lines.test.cpp  reporter.cpp  reporter.hpp
forge/syntax_tree/domain/: base_node.cpp  base_node.hpp  base_node.test.cpp  base_node.tpp  gtest_node_auto_assert.hpp  gtest_node_auto_assert.tpp  node_kind.cpp  node_kind.hpp
forge/syntax_tree/formatting/: debug_formatter.cpp  debug_formatter.hpp  debug_formatter.test.cpp  debug_formatter.tpp
forge/syntax_tree/operations/: casting.hpp  casting.test.cpp  casting.tpp  cloners.hpp  cloners.test.cpp  cloners.tpp  (+5 more)
forge/syntaxtree/: Cloners.test.cpp  Cloners.tpp  Comparators.hpp  Comparators.test.cpp  DebugFormatter.hpp  DebugFormatter.test.cpp  Handler.tpp  Node.test.cpp  Pass.hpp  Scope.hpp  Scope.test.cpp  SymbolResolutionHandler.hpp  SymbolResolutionHandler.tpp  Validators.tpp
forge/testing/: integration_test_harness.cpp  integration_test_harness.hpp
lib/core/: Tracing.cpp
lib/messaging/: Message.cpp  MessageContext.cpp  MessageContextTest.cpp  MessageTest.cpp  Severity.cpp  SeverityTest.cpp
lib/syntaxtree/: DebugFormatterTest.cpp  SymbolResolutionHandlerTest.cpp
libforge/: CMakeLists.txt  Makefile  README.md  SycamoreConfig.hpp.in  conanfile.txt
libforge/demo/: DemoCommandLine.cpp  DemoSyntaxTreeDebugFormatter.cpp
libforge/docs/: Doxyfile  mkdocs.yml
libforge/test/: ExampleLanguage.cpp
scripts/: build-docs.bash  build-ref.bash  build.bash  clean.bash  common.bash  serve-docs.bash  test.bash
search/: search_index.json
std/forge/: limits.frg
test/: ExampleLanguage.cpp
tests/: setup.cpp
tests/functional/: ExampleLanguage.cpp  example_language.cpp
tests/fuzzing/: binary_fuzzing.test.cpp
tests/integration/: example_language.cpp  example_language.test.cpp  function_returns_zero.test.cpp
(+548 files in other folders)
